# VA_2024-2025

./: README.md
Ejemplos/02_basic_concepts/02_01_read_image/: main_namespace.cpp
Ejemplos/Tema 02: Formación de la Imagen/Ejemplo 1: read_image/: main.cpp
Ejemplos/Tema 02: Formación de la Imagen/Ejemplo 2: pixels/: main.cpp
Ejemplos/Tema 03: Transformación del Dominio y Espacial/Ejemplo 02: cosine/: main.cpp
Ejemplos/Tema 03: Transformación del Dominio y Espacial/Ejemplo 6: logic/: main.cpp
Ejemplos/Tema 04: Transformación y Correciones/Ejemplo 01: geometric_transformations/: inclination.cpp  rotation.cpp
Ejemplos/Tema 04: Transformación y Correciones/Ejemplo 02: smoothing/: main.cpp
Ejemplos/Tema 04: Transformación y Correciones/Ejemplo 1: geometric_transformations/: translation.cpp
Ejemplos/Tema 04: Transformación y Correciones/Ejemplo 3: histogram_equalization/: main.cpp
Ejemplos/Tema 04: Transformación y Correciones/Ejemplo 4: histogram_comparison/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 01: sobel_edges/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 02: canny_edges/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 03: harris/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 04: hough_circles/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 06: RANSAC/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 06: contours/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 07: threshold/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 09: SURF_detection/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 11: moments/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 5: SURF_description/: main.cpp
Ejemplos/Tema 05: Bordes, Regiones y Puntos de Interés/Ejemplo 8: hough_lines/: main.cpp
Ejemplos/Tema 06: Operaciones Morfológicas/Ejemplo 01: erode_dilate/: main.cpp
Prácticas/: prácticas.txt
Prácticas/Práctica 3: Geometría, Calibración y 3D/src/practica3-grupo1/: CMakeLists.txt  README.md  package.xml
Prácticas/Práctica 3: Geometría, Calibración y 3D/src/practica3-grupo1/.github/workflows/: rolling.yaml
Prácticas/Práctica 3: Geometría, Calibración y 3D/src/practica3-grupo1/include/computer_vision/: CVSubscriber.hpp
Prácticas/Práctica 3: Geometría, Calibración y 3D/src/practica3-grupo1/launch/: cv.launch.py
Prácticas/Práctica 3: Geometría, Calibración y 3D/src/practica3-grupo1/src/computer_vision/: CVSubscriber.cpp
(+79 files in other folders)
